--- a/fly-generator-demo-projects/springboot-init/src/main/resources/application.yml
+++ b/fly-generator-demo-projects/springboot-init/src/main/resources/application.yml
@@ -22,8 +22,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/my_db
-    username: root
-    password: root
+    username: mroot
+    password: m123456
   # Redis 配置
   # todo 需替换配置，然后取消注释
 #  redis:
@@ -31,13 +31,13 @@ spring:
 #    host: localhost
 #    port: 6379
 #    timeout: 5000
-#    password: 123456
+#    password: r123456
   # Elasticsearch 配置
   # todo 需替换配置，然后取消注释
 #  elasticsearch:
 #    uris: http://localhost:9200
-#    username: root
-#    password: 123456
+#    username: eroot
+#    password: e123456
 server:
   address: 0.0.0.0
   port: 8101
