--- a/fly-generator-web-backend/pom.xml
+++ b/fly-generator-web-backend/pom.xml
@@ -108,6 +108,11 @@
             <optional>true</optional>
         </dependency>
         <dependency>
+            <groupId>com.fly</groupId>
+            <artifactId>fly-demo-sdk</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
