--- a/xxl-job-master/pom.xml
+++ b/xxl-job-master/pom.xml
@@ -37,7 +37,7 @@
 		<junit-jupiter.version>5.10.1</junit-jupiter.version>
 		<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
 
-		<groovy.version>4.0.18</groovy.version>
+		<groovy.version>4.0.17</groovy.version>
 
 		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
 		<maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
@@ -82,7 +82,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
-						<version>${maven-source-plugin.version}</version>
+						<version>3.3.0</version>
 						<executions>
 							<execution>
 								<phase>package</phase>
