--- a/fly-generator-web-backend/pom.xml
+++ b/fly-generator-web-backend/pom.xml
@@ -19,6 +19,13 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.xuxueli/xxl-job-core -->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
         <dependency>
             <groupId>com.fly</groupId>
             <artifactId>fly-generator-maker</artifactId>
@@ -30,7 +37,6 @@
             <artifactId>vertx-core</artifactId>
             <version>4.5.1</version>
         </dependency>
-
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
