--- a/xxl-job-master/xxl-job-admin/pom.xml
+++ b/xxl-job-master/xxl-job-admin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.xuxueli</groupId>
 		<artifactId>xxl-job</artifactId>
-		<version>2.4.1-SNAPSHOT</version>
+		<version>2.4.0</version>
 	</parent>
 	<artifactId>xxl-job-admin</artifactId>
 	<packaging>jar</packaging>
@@ -51,6 +51,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+
 		</dependency>
 
 		<!-- mybatis-starter：mybatis + mybatis-spring + hikari（default） -->
