--- a/fly-generator-web-backend/src/main/resources/application-prod.yml
+++ b/fly-generator-web-backend/src/main/resources/application-prod.yml
@@ -1,29 +1,107 @@
-# 线上配置文件
-server:
-  port: 8101
+# 公共配置文件
 spring:
+  application:
+    name: springboot-init
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+  # session 配置
+  session:
+    # todo 取消注释开启分布式 session（须先配置 Redis）
+    # store-type: redis
+    # 30 天过期
+    timeout: 2592000
   # 数据库配置
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/generate_db
     username: root
-    password: 123456
+    password: Ss5187395
   # Redis 配置
-  # todo 需替换配置
+  # todo 需替换配置，然后取消注释
   redis:
-    database: 1
+    database: 0
     host: localhost
     port: 6379
     timeout: 5000
-    password: 123456
+  # Elasticsearch 配置
+  # 文件上传
+  servlet:
+    multipart:
+      # 大小限制
+      max-file-size: 100MB
+server:
+  address: 0.0.0.0
+  port: 8200
+  servlet:
+    context-path: /api
+    # cookie 30 天过期
+    session:
+      cookie:
+        max-age: 2592000
+  tomcat:
+    accept-count: 1000
+    max-connections: 1000000
+    threads:
+      max: 500
+
 mybatis-plus:
   configuration:
-    # 生产环境关闭日志
-    log-impl: ''
-# 接口文档配置
-knife4j:
-  basic:
-    enable: true
-    username: root
-    password: 123456
+    map-underscore-to-camel-case: false
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      logic-delete-field: isDelete # 全局逻辑删除的实体字段名
+      logic-delete-value: 1 # 逻辑已删除值（默认为 1）
+      logic-not-delete-value: 0 # 逻辑未删除值（默认为 0）
+# 微信相关
+wx:
+  # 微信公众平台
+  # todo 需替换配置
+  mp:
+    token: xxx
+    aesKey: xxx
+    appId: xxx
+    secret: xxx
+    config-storage:
+      http-client-type: HttpClient
+      key-prefix: wx
+      redis:
+        host: 127.0.0.1
+        port: 6379
+      type: Memory
+  # 微信开放平台
+  # todo 需替换配置
+  open:
+    appId: xxx
+    appSecret: xxx
+# 对象存储
+# todo 需替换配置
+cos:
+  client:
+    bucket: flycode-1314556962
+    secret-key: X6mYPNMWnClV9nQ7021qX6Yt9JbzQtRy
+    region: ap-nanjing
+    access-key: AKIDjO958EJHHThuQybEwrnlgUI5ukkmv5IZ
+
+# xxl-job 配置
+xxl:
+  job:
+    admin:
+      # xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
+      addresses: http://124.71.207.114:8080/xxl-job-admin
+    # xxl-job, access token
+    accessToken: default_token
+    executor:
+      # xxl-job executor appname
+      appname: fly-generator-web-backend
+      # xxl-job executor registry-address: default use address to registry , otherwise use ip:port if address is null
+      address:
+      # xxl-job executor server-info
+      ip:
+      port: 9999
+      # xxl-job executor log-path
+      logpath: logs/jobhandler
+      # xxl-job executor log-retention-days
+      logretentiondays: 30
