--- a/fly-generator-web-backend/.gitignore
+++ b/fly-generator-web-backend/.gitignore
@@ -146,3 +146,5 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 !/src/main/resources/application-prod.yml
+!/src/main/resources/application-prod.yml
+!/src/main/resources/application-prod.yml
